--- a/ci-docs/index.yml
+++ b/ci-docs/index.yml
@@ -4,14 +4,14 @@ metadata:
   author: m-hartmann
   description: Otsige asjakohaseid artikleid, et alustada spikri kasutamist.
   ms.author: mhart
-  ms.date: 03/02/2022
+  ms.date: 05/18/2022
   ms.topic: landing-page
-  ms.openlocfilehash: e3a9f6d5f4d23ca3e85fa3f69272a0162ca7bd2d
-  ms.sourcegitcommit: b7dbcd5627c2ebfbcfe65589991c159ba290d377
+  ms.openlocfilehash: e8134fa66ce47cdf8aeab144b8405104fb257f6c
+  ms.sourcegitcommit: 6108152b3d28a2ec140eae32a61dbf4317baa37b
   ms.translationtype: MT
   ms.contentlocale: et-EE
-  ms.lasthandoff: 04/27/2022
-  ms.locfileid: "8641651"
+  ms.lasthandoff: 05/19/2022
+  ms.locfileid: "8781359"
 title: Dynamics 365 Customer Insightsi dokumentatsioon
 summary: Saate leida kasulikke ressursse, et alustada ning saada teavet Customer Insightsi funktsioonide ja võimaluste kohta.
 landingContent:
@@ -43,16 +43,30 @@ landingContent:
     links:
     - text: Hakkame pihta
       url: /learn/modules/get-started-customer-data-platform/
-- title: Andmete ühtlustamine
+- title: Andmete valmendamine
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: Andmeallikate ülevaade
       url: data-sources.md
+    - text: Ühendage, kasutades Power Query
+      url: connect-power-query.md
+    - text: Microsoft Dataverse’iga ühenduse loomine
+      url: connect-dataverse-managed-lake.md
+  - linkListType: learn
+    links:
+    - text: Andmete sisestamine Customer Insightsi
+      url: /learn/modules/ingest-data-customer-insights/
+- title: Andmete ühtlustamine
+  linkLists:
+  - linkListType: how-to-guide
+    links:
     - text: Ühtlustamise ülevaade
       url: data-unification.md
     - text: Olemitest arusaamine
       url: entities.md
+    - text: Ühtsete profiilide ülevaatamine
+      url: customer-profiles.md
   - linkListType: learn
     links:
     - text: Ühtse profiili loomine
@@ -99,20 +113,6 @@ landingContent:
     links:
     - text: Väliste ühenduste haldamine
       url: /learn/modules/configure-third-party-connections/
-- title: Rakenduse haldamine
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Süsteemi konfigureerimine
-      url: system.md
-    - text: Kasutajaõiguste määratlemine
-      url: permissions.md
-    - text: Mitme keskkonna haldamine
-      url: manage-environments.md
-  - linkListType: learn
-    links:
-    - text: Customer Insightsi haldamine
-      url: /learn/modules/administer-customer-data-platform/
 - title: Customer Insightsi haldamine
   linkLists:
   - linkListType: how-to-guide
